# SymboScript

./: Cargo.toml  LICENSE  readme.md
analyzer/: Cargo.toml
examples/: assigns.syms  blocks.syms  declarations.syms  error_handling.syms  expr.syms  factorial.syms  hello_world.syms  interpret_first_tests.syms  optimizer.syms  scope.syms  test.syms  test_loops.syms
examples/basic/: context.syms  conversions.syms  error_handling.syms  expr.syms  factorial.syms  hashmap.syms  loops.syms  optimizer.syms  test.syms
examples/basic/imports/numbers/: funny.syms  real.syms
examples/imports/: import_test.syms  numbers.syms
examples/imports/numbers/: funny.syms  real.syms
formatter/: Cargo.toml  readme.md
formatter/src/: formatter.rs  main.rs
interpreter/: Cargo.toml  readme.md
interpreter/src/: main.rs  repl.rs
interpreter/src/interpreter/: macro_utils.rs  mod.rs
interpreter/src/interpreter/native/: conversions.rs  hashmap.rs  io.rs  macro_utils.rs  mod.rs
interpreter/src/interpreter/native/lang/: hashmap.rs
lexer/: Cargo.toml  readme.md
lexer/examples/: test.syms
lexer/src/: lib.rs  main.rs  utils.rs
lexer/src/lexer/: mod.rs
lexer/src/types/: mod.rs
optimizer/: Cargo.toml  readme.md
optimizer/src/: lib.rs  main.rs
optimizer/src/optimizer/: mod.rs
optimizer/src/optimizer/expressions/: mod.rs
parser/: Cargo.toml  readme.md
parser/src/: lib.rs  main.rs  tests.rs
parser/src/parser/: macro_utils.rs  mod.rs
types/: Cargo.toml  LICENSE  readme.md
types/src/: interpreter.rs  lexer.rs  lib.rs  parser.rs
utils/: Cargo.toml  readme.md
utils/src/: lib.rs
