[package]
name = "symboscript-formatter"
version = "0.6.12"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "SymboScript formatter"
repository = "https://github.com/artegoser/SymboScript"
homepage = "https://github.com/artegoser/SymboScript/tree/main/formatter"
documentation = "https://github.com/artegoser/SymboScript/blob/master/doc/main.md"
keywords = ["programming-language", "formatter", "symbolic", "symboscript"]
categories = ["compilers"]

[dependencies]
symboscript-lexer = { path = "../lexer", version = "0.7.11" }
symboscript-types = { path = "../types", version = "0.16.0", features = [
  "lexer",
] }
clap = { version = "4.4.13", features = ["derive"] }
