[package]
name = "symboscript-interpreter"
version = "0.11.1"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "SymboScript interpreter"
repository = "https://github.com/artegoser/SymboScript"
homepage = "https://github.com/artegoser/SymboScript/tree/main/interpreter"
documentation = "https://github.com/artegoser/SymboScript/blob/master/doc/main.md"
keywords = ["programming-language", "interpreter", "symbolic", "symboscript"]
categories = ["compilers"]

[dependencies]
symboscript-types = { path = "../types", version = "0.15.0", features = [
  "interpreter",
] }
symboscript-utils = { path = "../utils", version = "0.6.9" }
symboscript-parser = { path = "../parser", version = "0.9.2" }
symboscript-optimizer = { path = "../optimizer", version = "0.7.11" }

clap = { version = "4.4.12", features = ["derive"] }
colored = "2.1.0"

[[bin]]
name = "symboscript"
path = "src/main.rs"

[[bin]]
name = "symboscript-interpreter"
path = "src/main.rs"
