[package]
name = "symboscript-interpreter"
version = "0.13.1"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "SymboScript interpreter"
repository = "https://github.com/artegoser/SymboScript"
homepage = "https://github.com/artegoser/SymboScript/tree/main/interpreter"
documentation = "https://github.com/artegoser/SymboScript/blob/master/doc/main.md"
keywords = ["programming-language", "interpreter", "symbolic", "symboscript"]
categories = ["compilers"]

[dependencies]
symboscript-types = { path = "../types", version = "0.15.2", features = [
  "interpreter",
] }
symboscript-utils = { path = "../utils", version = "0.6.12" }
symboscript-parser = { path = "../parser", version = "0.10.3" }
symboscript-optimizer = { path = "../optimizer", version = "0.7.15" }

clap = { version = "4.4.13", features = ["derive"] }
colored = "2.1.0"

[[bin]]
name = "symboscript"
path = "src/main.rs"

[[bin]]
name = "symboscript-interpreter"
path = "src/main.rs"
