[package]
name = "symboscript-lexer"
version = "0.7.4"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "SymboScript lexer"
repository = "https://github.com/artegoser/SymboScript"
homepage = "https://github.com/artegoser/SymboScript/tree/main/lexer"
documentation = "https://github.com/artegoser/SymboScript/blob/master/doc/main.md"
readme = "./README.md"
keywords = ["programming-language", "lexer", "symbolic", "symboscript"]
categories = ["compilers"]

[[bin]]
name = "symboscript-lexer"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

symboscript-utils = { path = "../utils", version = "0.6.6" }
symboscript-types = { path = "../types", version = "0.12.0", features = [
  "lexer",
] }

clap = { version = "4.4.12", features = ["derive"] }
