[package]
name = "symboscript-lexer"
version = "0.8.4"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "SymboScript lexer"
repository = "https://github.com/artegoser/SymboScript"
homepage = "https://github.com/artegoser/SymboScript/tree/main/lexer"
documentation = "https://github.com/artegoser/SymboScript/blob/master/doc/main.md"
readme = "./README.md"
keywords = ["programming-language", "lexer", "symbolic", "symboscript"]
categories = ["compilers"]

[[bin]]
name = "symboscript-lexer"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"

symboscript-utils = { path = "../utils", version = "0.6.17" }
symboscript-types = { path = "../types", version = "0.18.1", features = [
  "lexer",
] }

clap = { version = "4.4.13", features = ["derive"] }
