[package]
name = "symboscript-optimizer"
version = "0.7.1"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "SymboScript optimizer"
repository = "https://github.com/artegoser/SymboScript"
homepage = "https://github.com/artegoser/SymboScript/tree/main/optimizer"
documentation = "https://github.com/artegoser/SymboScript/blob/master/doc/main.md"
keywords = ["programming-language", "optimizer", "symbolic", "symboscript"]
categories = ["compilers"]

[dependencies]
symboscript-types = { path = "../types", version = "0.8.0", features = [
  "parser",
  "lexer",
] }
symboscript-utils = { path = "../utils", version = "0.6.2" }
symboscript-parser = { path = "../parser", version = "0.7.1" }

clap = { version = "4.4.12", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"
