[package]
name = "symboscript-optimizer"
version = "0.7.14"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "SymboScript optimizer"
repository = "https://github.com/artegoser/SymboScript"
homepage = "https://github.com/artegoser/SymboScript/tree/main/optimizer"
documentation = "https://github.com/artegoser/SymboScript/blob/master/doc/main.md"
keywords = ["programming-language", "optimizer", "symbolic", "symboscript"]
categories = ["compilers"]

[dependencies]
symboscript-types = { path = "../types", version = "0.15.1", features = [
  "parser",
  "lexer",
] }
symboscript-utils = { path = "../utils", version = "0.6.11" }
symboscript-parser = { path = "../parser", version = "0.10.2" }

clap = { version = "4.4.13", features = ["derive"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"
