[package]
name = "symboscript-parser"
version = "0.10.1"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "SymboScript parser"
repository = "https://github.com/artegoser/SymboScript"
homepage = "https://github.com/artegoser/SymboScript/tree/main/parser"
documentation = "https://github.com/artegoser/SymboScript/blob/master/doc/main.md"
readme = "./README.md"
keywords = ["programming-language", "parser", "symbolic", "symboscript"]
categories = ["compilers"]

[[bin]]
name = "symboscript-parser"
path = "src/main.rs"

[dependencies]
symboscript-lexer = { path = "../lexer", version = "0.7.8" }
symboscript-types = { path = "../types", version = "0.15.1", features = [
  "parser",
] }
symboscript-utils = { path = "../utils", version = "0.6.10" }

clap = { version = "4.4.12", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.29"
