[package]
name = "symboscript-parser"
version = "0.11.4"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "SymboScript parser"
repository = "https://github.com/artegoser/SymboScript"
homepage = "https://github.com/artegoser/SymboScript/tree/main/parser"
documentation = "https://github.com/artegoser/SymboScript/blob/master/doc/main.md"
readme = "./README.md"
keywords = ["programming-language", "parser", "symbolic", "symboscript"]
categories = ["compilers"]

[[bin]]
name = "symboscript-parser"
path = "src/main.rs"

[dependencies]
symboscript-lexer = { path = "../lexer", version = "0.8.4" }
symboscript-types = { path = "../types", version = "0.18.1", features = [
  "parser",
] }
symboscript-utils = { path = "../utils", version = "0.6.17" }

clap = { version = "4.4.13", features = ["derive"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"
