[package]
name = "symboscript-types"
version = "0.10.0"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "A symbolic programming language SymboScript types"
repository = "https://github.com/artegoser/SymboScript"
homepage = "https://github.com/artegoser/SymboScript/tree/main/types"
documentation = "https://github.com/artegoser/SymboScript/blob/master/doc/main.md"
readme = "./README.md"
keywords = ["programming-language", "types", "symboscript"]
categories = ["compilers"]

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[features]
parser = []
lexer = []
interpreter = []
