[package]
name = "symboscript-utils"
version = "0.6.6"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "SymboScript utils"
repository = "https://github.com/artegoser/SymboScript"
homepage = "https://github.com/artegoser/SymboScript/tree/main/utils"
documentation = "https://github.com/artegoser/SymboScript/blob/master/doc/main.md"
readme = "./README.md"
keywords = ["programming-language", "utils", "symboscript"]
categories = ["compilers"]

[dependencies]
colored = "2.1.0"
symboscript-types = { path = "../types", version = "0.12.0", features = [
  "lexer",
] }
